# pdf-reader-LLM

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: bot_api.py  fine_tune.py  main.py  pdf_reader.py  preprocess.py
